# chat-langchain

./: MODIFY.md  README.md  RUN_LOCALLY.md  pyproject.toml
_scripts/: clear_index.py  evaluate_chains.py  evaluate_chains_agent.py  evaluate_chains_improved_chain.py
backend/: chain.py  generate_diff_schema.py  generate_schema.py  ingest.py  main.py  parser.py  upload.py
backend/chains/: compare_chain.py  compared_chain.py  condense_question_chain.py  diff_chain.py  explain_chain.py  extract_chain.py  general_chain.py  generate_chain.py  generate_compared_chain.py  generate_diff_chain.py  generate_wrap_chain.py  output_chain.py  self_check_chain.py
cases/: flow-cases.yml
cases/diff_json/: base.json  changed.json
frontend/: package.json
frontend/app/: globals.css  layout.tsx
schema/: compoment.json  components_descriptions.json  components_schema.json  temp.json
schema/components_schema/: api_callback.component.json  api_request.component.json  assign_agent_pool.component.json  (+28 more)
studio_components/: begin_module.component.json  calendar_based_rules.component.json  end_flow.component.json  estimated_waiting_time.component.json  forward_to_external_number.component.json  hang_up.component.json  incoming_call.component.json  input_ivr.component.json  make_outbound_call.component.json  play_digits.component.json  record.component.json  standard_ivr.component.json  time_based_rules.component.json  voicemail.component.json
template/: custom_exit_schema.json  custom_exit_with_condition_schema.json  exit_schema.json  exit_with_condition_schema.json  step_schema.json
(+95 files in other folders)
